// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button matches screenshot 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all colors 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-bmmCCE-color-secondary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-chBTEJ-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-cbktrZ-color-success c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-fMjTrh-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-fWqKPQ-color-warning c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-dKsfPN-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-cgBQIK-color-error c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-gURxYt-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all sizes 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-cmVdgU-size-sm c-jXjExk-dCRXRO-disabled-false c-jXjExk-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-lXiLo-size-lg c-jXjExk-dCRXRO-disabled-false c-jXjExk-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all variants 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-dSKgWl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-bRdhPS-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    aria-disabled="false"
    class="c-jXjExk c-jXjExk-jsOpSy-color-primary c-jXjExk-sKeyg-size-md c-jXjExk-dCRXRO-disabled-false c-jXjExk-cyBLNz-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;
